# CUNY_course

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  .safety  Dockerfile  Makefile  README.md  README_dev.md  app.py  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt
CUNY_course/: __init__.py  __main__.py  format_errror.py  links.md  outline.md  polls.md  structured_output.py
CUNY_course/data_types/: __init__.py  person.py
CUNY_course/example_code/: __init__.py  format_errror.py  structured_output.py
CUNY_course/example_code/rag_pipeline/: 01_data_prep.py  02_chunking.py  03_embedding.py  04_metadata.py  05_retrieval.py  06_generation.py  __init__.py  _embedding.py  _stage_support.py  _types.py  _utils.py  chunking_step.py  data_prep_step.py  embedding_step.py  generation_step.py  metadata_step.py  pipeline_demo.py  rag_pipeline_demo.ipynb  retrieval_step.py
CUNY_course/example_data/: 100words.txt  10languages.txt  EU_doc.docx  rag_toy_corpus.jsonl  usconstitution.txt
CUNY_course/example_data/parsing_and_chunking/: yosemite_guide.md
CUNY_course/example_data/semantic_galaxy/: 100places.txt  50booktitles.txt
CUNY_course/example_data/structured_output/: demonstration_text.txt  interesting_person.txt  uninteresting_person.txt
docs/: api.md  dev_guide.md
docs/css/: custom.css
jobs/: get_sys_info.bash
scripts/: get_sys_info.py
tests/: __init__.py  conftest.py  test_main.py
tools/: color.py  docfix.py  envvars.py  logging.py  navigating.py  tomlfile.py
